# nyx

./: .gitignore  CMakeLists.txt  README.md
src/runtime/: CMakeLists.txt  engine.cpp  engine.h  runtime.h
src/runtime/core/: lru.hpp  type_traits.h
src/runtime/extension/: function.h
src/runtime/framework/component/: transform.h
src/runtime/gfx/: gfx.cpp  gfx.h  gfx_context.h  module.h  system.cpp  system.h
src/runtime/gfx/component/: gfx_context.h
src/runtime/gfx/system/: setup_gfx_context.cpp  setup_swap_chain.cpp
src/runtime/render/: bindable.h  module.h  pass.cpp  pass.h  render.cpp  render.h  render_graph.cpp  render_graph.h  renderable.cpp  renderable.h  sink.cpp  sink.h  source.cpp  source.h  system.cpp  system.h
src/runtime/render/bindable/: bindable.h  index_buffer.cpp  index_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/runtime/render/component/: gfx_context.h
src/runtime/render/renderable/: renderable.cpp  renderable.h
src/runtime/render/system/: setup_gfx_context.cpp  setup_swap_chain.cpp
src/runtime/resource/: asset.cpp  asset.h  asset_reader.cpp  asset_reader.h  mesh_asset.cpp  mesh_asset.h
src/runtime/window/: module.h  system.cpp  system.h  window.cpp  window.h
src/runtime/window/component/: window.h
src/runtime/window/system/: setup_window.cpp  update_window.cpp
thirdParty0/: CMakeLists.txt  README.md
thirdParty0/glfw-3.3.9/docs/html/: group__window.html  news.html
thirdParty0/glfw-3.3.9/include/GLFW/: glfw3.h
thirdParty0/imgui-1.90.3/: imgui_demo.cpp
thirdParty0/imgui-1.90.3/docs/: BACKENDS.md  EXAMPLES.md
thirdParty0/imgui-1.90.3/examples/example_emscripten_wgpu/: README.md
thirdParty0/imgui-1.90.3/examples/example_glfw_opengl2/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_glfw_opengl3/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_glfw_vulkan/: build_win32.bat  build_win64.bat
thirdParty0/imgui-1.90.3/examples/example_sdl2_directx11/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_sdl2_opengl2/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_sdl2_opengl3/: README.md
thirdParty0/imgui-1.90.3/examples/example_sdl2_sdlrenderer2/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_sdl2_vulkan/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_win32_directx12/: build_win32.bat
thirdParty0/imgui-1.90.3/examples/example_win32_directx9/: build_win32.bat
thirdParty0/taskflow-3.6.0/docs/: ConditionalTasking.html  TaskflowProcessingPipeline.html  classtf_1_1FlowBuilder.html  classtf_1_1Pipeline.html  classtf_1_1ScalablePipeline.html  flipcoins.html  index.html  kmeans.html
thirdParty0/taskflow-3.6.0/docs/xml/: ParallelSort.xml  ParallelTransforms.xml  indexpage.xml  kmeans.xml  (+1 more)
thirdParty0/webgpu_extension-v0.0.1/: CMakeLists.txt
(+7 files in other folders)
